templates/service.yaml
---
# Source: assurity-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service-dev-v1-0-3
  labels:
    helm.sh/chart: assurity-app-0.1.0
    app.kubernetes.io/name: helloworld-service-dev-v1.0.3
    app.kubernetes.io/instance: helloworld-service-dev-v1.0.3
    app: helloworld-service-dev-v1.0.3
    version: "v1.0.3"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: helloworld-service-dev-v1.0.3
    app.kubernetes.io/instance: helloworld-service-dev-v1.0.3
    app: helloworld-service-dev-v1.0.3
    version: "v1.0.3"
