templates/ingress.yaml
---
# Source: assurity-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-service-dev-v1-0-3
  labels:
    helm.sh/chart: assurity-app-0.1.0
    app.kubernetes.io/name: helloworld-service-dev-v1.0.3
    app.kubernetes.io/instance: helloworld-service-dev-v1.0.3
    app: helloworld-service-dev-v1.0.3
    version: "v1.0.3"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: "helloworld-service-dev-assurity-sandbox.apps.oscdev.assurity.local"
      http:
        paths:
          - path: /
            backend:
              service:
                name: helloworld-service-dev-v1-0-3
                port: 
                  number: 8082
            pathType: Prefix
