templates/service-mesh-destinationrule.yaml
---
# Source: assurity-app/templates/service-mesh-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ahw-r
spec:
  host: helloworld-service-dev-v1-0-3
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN  
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10      
    outlierDetection:
      consecutive5xxErrors: 7
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 100
