templates/service-mesh-virtualservice.yaml
---
# Source: assurity-app/templates/service-mesh-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ahw-vs
spec:
  hosts:
  - "*"
  gateways:
  - ahw-gw  ###############################################
  http:     # This Virtual Service listens for requests
  - match:  # coming in on this Gateway
    - uri:  ###############################################
        prefix: /helloworld-service-dev/     ###############################################
    route:           # Any root request, for example, a request coming from:    
    - destination:
        host: helloworld-service-dev-v1-0-3
        port:
          number: 8082
    retries:
      attempts: 3
      perTryTimeout: 2s    
    rewrite:
      uri: /
