templates/egress-rules.yaml
---
# Source: assurity-app/templates/egress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: helloworld-service-dev-v1.0.3-egress-rules
  labels:
    helm.sh/chart: assurity-app-0.1.0
    app.kubernetes.io/name: helloworld-service-dev-v1.0.3
    app.kubernetes.io/instance: helloworld-service-dev-v1.0.3
    app: helloworld-service-dev-v1.0.3
    version: "v1.0.3"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: helloworld-service-dev-v1.0.3
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: assurity-sandbox
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
