templates/ingress-rules.yaml
---
# Source: assurity-app/templates/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: helloworld-service-dev-v1.0.3-ingress-rules
  labels:
    helm.sh/chart: assurity-app-0.1.0
    app.kubernetes.io/name: helloworld-service-dev-v1.0.3
    app.kubernetes.io/instance: helloworld-service-dev-v1.0.3
    app: helloworld-service-dev-v1.0.3
    version: "v1.0.3"
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: helloworld-service-dev-v1.0.3
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: assurity-sandbox
